src/test/deca/context/invalid/expr_new_type_not_a_class.deca
// Test on rule (3.42) : If we try to instanciate an object of a class
// that does not exists, it fails.

{
  A a = new A();
}

//# a


